--- a/Views/Categories/Index.cshtml
+++ b/Views/Categories/Index.cshtml
@@ -12,8 +12,7 @@
 
 @if (ViewBag.Message != null)
 {
-
-    <h2 class="alert alert-success p-3 rounded-3 text-center mb-5">@ViewBag.Message</h2>
+        <div class="alert @ViewBag.Alert" role="alert">@ViewBag.Message</div>
 }
 
 
@@ -55,6 +54,6 @@
 </div>
 
 <br />
-<a class="btn btn-success" asp-controller="Categories" asp-action="New">Adaugă o nouă categorie</a>
+<a class="btn btn-primary" asp-controller="Categories" asp-action="New">Adaugă o nouă categorie</a>
 <br />
 
