--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -31,6 +31,8 @@
                     <div class="card-body d-flex flex-column">
                         <h6 class="card-title">@p.Title</h6>
 
+                        <div><i class="bi bi-globe"></i> @p.Category.CategoryName</div>
+
                         <div class="mt-auto fw-bold text-danger fs-5">
                             @p.Price Lei
                         </div>
