--- a/Views/Products/Show.cshtml
+++ b/Views/Products/Show.cshtml
@@ -39,8 +39,12 @@
 
             <h2 class="fw-bold">@Model.Title</h2>
 
+            <div><i class="bi bi-globe"></i> @Model.Category.CategoryName</div>
+
+            <br />
+
             <div class="mb-2 text-warning">
-                @ViewBag.Score
+                Scor: @ViewBag.Score
             </div>
 
             <p class="mt-3">
@@ -74,7 +78,7 @@
 
     <hr class="my-4" />
 
-    <h5>Reviews</h5>
+    <h5>Recenzii</h5>
 
     @if (Model.Reviews != null && Model.Reviews.Any()) {
         @foreach (var rev in Model.Reviews) {
@@ -84,28 +88,104 @@
                     @rev.User.UserName
                 </small>
 
-                <p class="mb-1 fw-bold">
-                    Rating: @rev.Rating
-                </p>
+
+                @if (rev.Rating > 0)
+                {
+                    <p class="mb-1 fw-bold">
+                        Rating: @rev.Rating
+                    </p>
+                }
 
                 <p class="mb-1">
                     @rev.Text
                 </p>
 
                 <small class="text-muted">
-                    @rev.Date.ToString("dd MMM yyyy")
+                    @rev.Date.ToString("dd MMM yyyy HH:mm")
                 </small>
+
+                <br />
+                <br />
+
+                @if (User.IsInRole("Admin") ||
+                          rev.UserId == User.FindFirst(System.Security.Claims.ClaimTypes.NameIdentifier)?.Value)
+                {
+
+                    <a asp-controller="Reviews"
+                    asp-action="Edit"
+                    asp-route-id="@rev.Id"
+                    class="btn btn-outline-secondary btn-sm">
+                        ✏️ Editează recenzia
+                    </a>
+
+                    <form method="post"
+                    asp-controller="Reviews"
+                      asp-action="Delete"
+                          asp-route-id="@rev.Id">
+                    <button type="submit"
+                            class="btn btn-outline-danger btn-sm">
+                            🗑️ Șterge recenzia
+                    </button>
+                    </form>
+                }
 
             </div>
         }
     }
     else {
-        <p class="text-muted">No comments yet.</p>
+        <p class="text-muted">Nu există nicio recenzie încă.</p>
     }
+
+
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+
+            <div class="col-md-8 col-lg-6">
+
+                <div class="card shadow-sm">
+                    <div class="card-body">
+
+                        <h3 class="card-title mb-4 text-center">
+                            Adaugă o recenzie
+                        </h3>
+
+                        <form asp-action="Show" asp-controller="Products" method="post">
+
+                            <input type="hidden" name="ProductId" value="@Model.Id" />
+
+                            <div class="mb-3">
+                                <label class="form-label"> Text recenzie </label>
+                                <textarea class="form-control" rows="4" name="Text"></textarea>
+                            </div>
+
+                            <div class="mb-3">
+                                <label class="form-label"> Rating </label>
+                                <input class="form-control" type="number" name="Rating"/>
+                            </div>
+
+                            <div class="d-flex justify-content-between">
+                                <a asp-action="Index" class="btn btn-outline-secondary">
+                                    Anulează
+                                </a>
+
+                                <button type="submit" class="btn btn-primary px-4">
+                                    Adaugă
+                                </button>
+                            </div>
+
+                        </form>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
 
     <hr />
 
-    <h5>FAQs</h5>
+    <h5>FAQ</h5>
 
     @if (Model.FAQs != null && Model.FAQs.Any()) {
         @foreach (var q in Model.FAQs) {
@@ -116,7 +196,7 @@
         }
     }
     else {
-        <p class="text-muted">No questions yet.</p>
+        <p class="text-muted">Nu există nicio întrebare încă.</p>
     }
 
 </div>
