--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -23,7 +23,7 @@
                 <div class="card h-100 product-card">
 
                     <div class="d-flex align-items-center justify-content-center p-3">
-                        <img src="~/Images/placeholder2.png"
+                        <img src="@p.Image"
                              class="img-fluid product-img"
                              alt="Product image" />
                     </div>
