--- a/Views/Products/New.cshtml
+++ b/Views/Products/New.cshtml
@@ -16,7 +16,7 @@
                         Adaugă un produs
                     </h3>
 
-                    <form asp-controller="Products" asp-action="New" method="post">
+                    <form asp-controller="Products" enctype="multipart/form-data" asp-action="New" method="post">
 
                         <div asp-validation-summary="All" class="text-danger"></div>
 
@@ -32,6 +32,14 @@
                                       class="form-control"
                                       rows="4"></textarea>
                             <span asp-validation-for="Description" class="text-danger small"></span>
+                        </div>
+
+                        <div class="mb-3">
+                            <label asp-for="Image" class="form-label"> Încarcă Imaginea </label>
+                            <input asp-for="Image" type="file"
+                                      class="form-control"
+                                      rows="4"></input>
+                            <span asp-validation-for="Image" class="text-danger small"></span>
                         </div>
 
                         <div class="mb-3">
