Fixed Rating validation for reviews

--- a/Views/Products/New.cshtml
+++ b/Views/Products/New.cshtml
@@ -35,10 +35,10 @@
                         </div>
 
                         <div class="mb-3">
-                            <label asp-for="Image" class="form-label"> Încarcă Imaginea </label>
+                            <label asp-for="Image" class="form-label"> Încarcă imaginea </label>
                             <input asp-for="Image" type="file"
                                       class="form-control"
-                                      rows="4"></input>
+                                      rows="4">
                             <span asp-validation-for="Image" class="text-danger small"></span>
                         </div>
 
