--- a/Views/Products/Show.cshtml
+++ b/Views/Products/Show.cshtml
@@ -4,7 +4,7 @@
 
     <div class="row">
         <div class="col-md-5 text-center">
-            <img src="~/Images/placeholder2.png"
+            <img src="@Model.Image"
                  class="img-fluid rounded border"
                  alt="@Model.Title" />
         </div>
@@ -43,9 +43,12 @@
 
             <br />
 
-            <div class="mb-2 text-warning">
-                Scor: @ViewBag.Score
-            </div>
+            @if (User.Identity.IsAuthenticated)
+            {
+                <div class="mb-2 text-warning">
+                    Scor: @Model.Rating
+                </div>
+            }
 
             <p class="mt-3">
                 @Model.Description
@@ -161,6 +164,7 @@
                             <div class="mb-3">
                                 <label class="form-label"> Rating </label>
                                 <input class="form-control" type="number" name="Rating"/>
+                                <span asp-validation-for="Rating" class="text-danger"></span>
                             </div>
 
                             <div class="d-flex justify-content-between">
