--- a/Views/Products/New.cshtml
+++ b/Views/Products/New.cshtml
@@ -36,7 +36,7 @@
 
                         <div class="mb-3">
                             <label asp-for="Image" class="form-label"> Încarcă imaginea </label>
-                            <input asp-for="Image" type="file"
+                            <input name="ImageFile" type="file"
                                       class="form-control"
                                       rows="4">
                             <span asp-validation-for="Image" class="text-danger small"></span>
